      version 5.0.4, a minor bug-fix release.

      \item New function \code{.bincode()}, a \sQuote{bare-bones}
      version of \code{cut.default(labels = FALSE)} for use in packages
      with \code{image()} methods.
      
      \item The HTML manuals now use directional single quotes.
      
      \item \code{maintainer()} now converts embedded new lines to spaces.
    }
  }

  \subsection{PERFORMANCE IMPROVEMENTS}{
    \itemize{
      \item \code{array()} is now implemented in C code (for speed) when
      \code{data} is atomic or an unclassed list (so it is known that
      \code{as.vector(data)} will have no class to be used by \code{rep()}).
      
      \item \code{rep()} is faster and uses less memory,
      substantially so in some common cases (e.g. if \code{times} is of
      length one or \code{length.out} is given, and \code{each = 1}).
      
      \item \code{findInterval()}, \code{tabulate()}, \code{cut()},
      \code{hist()} and \code{image.default()} all use \code{.Call()}
      and are more efficient.
      
      \item \code{duplicated()}, \code{unique()} and similar now
      support vectors of lengths above \eqn{2^{29}}{2^29} on 64-bit
      platforms.
    }
  }

  \subsection{UTILITIES}{
    \itemize{
      \item \command{R CMD check} now checks if a package can be loaded
      by \code{library(pkgname, lib.loc = "somewhere")} without being on
      the library search path (unless it is already installed in
      \code{.Library}, when it always will be).

      \item \command{R CMD check --as-cran} notes \sQuote{hidden} files
      and directories (with names starting with a dot) that are not
      needed for the operation of \command{R CMD INSTALL} or \code{R CMD
	build}: such files should be excluded from the published tarball.

      \item \command{R CMD check} (if checking subdirectories) checks
      that the \R code in any demos is ASCII and can be parsed, and
      warns if not.
      